--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="container">
 
     <div class="section">
-      <h2>1. Pengenalan Huruf Vokal dalam Bahasa Thai</h2>
+      <h2>1. Huruf Vokal dalam Bahasa Thai</h2>
       <p>Dalam bahasa Thai, huruf vokal disebut <strong>sara (สระ)</strong>. Vokal adalah elemen penting yang membentuk suku kata bersama dengan huruf konsonan. Tidak seperti dalam alfabet Latin, vokal dalam bahasa Thai <strong>tidak bisa berdiri sendiri</strong>, melainkan ditulis mengelilingi huruf konsonan: di depan, atas, bawah, belakang, atau kombinasi dari posisi tersebut.</p>
           </div>
 
@@ -90,13 +90,13 @@
       <h2>2. Vokal Pendek</h2>
       <p>Vokal pendek memiliki durasi pengucapan yang singkat. Kesalahan panjang-pendek bisa mengubah arti kata.</p>
       <table>
-        <tr><th>Vokal</th><th>Suara</th><th>Posisi</th><th>Contoh</th><th>Arti</th></tr>
-        <tr><td>ะ</td><td>a</td><td>Belakang konsonan</td><td>มะ (ma)</td><td>buah</td></tr>
-        <tr><td>ิ</td><td>i</td><td>Bawah konsonan</td><td>มิ (mi)</td><td>tidak</td></tr>
-        <tr><td>ึ</td><td>ue</td><td>Bawah konsonan</td><td>นึ (nue)</td><td>ingat</td></tr>
-        <tr><td>ุ</td><td>u</td><td>Bawah konsonan</td><td>สุ (su)</td><td>baik</td></tr>
-        <tr><td>เ-ะ</td><td>e</td><td>Depan dan belakang</td><td>เบะ (be)</td><td>terbuka</td></tr>
-        <tr><td>แ-ะ</td><td>ae</td><td>Depan dan belakang</td><td>แปะ (pae)</td><td>tempel</td></tr>
+        <tr><th>Vokal</th><th>Suara</th><th>Posisi</th><th>Contoh</th></tr>
+        <tr><td>ะ</td><td>a</td><td>Belakang konsonan</td><td>มะ (ma)</td></tr>
+        <tr><td>ิ</td><td>i</td><td>Atas konsonan</td><td>มิ (mi)</td></tr>
+        <tr><td>ึ</td><td>ue</td><td>Atas konsonan</td><td>นึ (nue)</td></tr>
+        <tr><td>ุ</td><td>u</td><td>Bawah konsonan</td><td>สุ (su)</td></tr>
+        <tr><td>เ-ะ</td><td>e</td><td>Depan dan belakang</td><td>เบะ (be)</td></tr>
+        <tr><td>แ-ะ</td><td>ae</td><td>Depan dan belakang</td><td>แปะ (pae)</td></tr>
       </table>
     </div>
 
@@ -104,15 +104,15 @@
       <h2>3. Vokal Panjang</h2>
       <p>Vokal panjang memiliki durasi pelafalan yang lebih lama dari vokal pendek. Bunyi vokalnya sama, namun diucapkan lebih panjang.</p>
       <table>
-        <tr><th>Vokal</th><th>Suara</th><th>Posisi</th><th>Contoh</th><th>Arti</th></tr>
-        <tr><td>า</td><td>aa</td><td>Belakang konsonan</td><td>มา (maa)</td><td>datang</td></tr>
-        <tr><td>ี</td><td>ii</td><td>Atas konsonan</td><td>มี (mii)</td><td>punya</td></tr>
-        <tr><td>ือ</td><td>ue</td><td>Atas dan belakang</td><td>คือ (kue)</td><td>adalah</td></tr>
-        <tr><td>ู</td><td>uu</td><td>Bawah konsonan</td><td>พู (phuu)</td><td>berbicara</td></tr>
-        <tr><td>เ-</td><td>ee</td><td>Depan konsonan</td><td>เม (mee)</td><td>bulan</td></tr>
-        <tr><td>แ-</td><td>ae</td><td>Depan konsonan</td><td>แม่ (mae)</td><td>ibu</td></tr>
-        <tr><td>โ-</td><td>oo</td><td>Depan konsonan</td><td>โม (moo)</td><td>nama</td></tr>
-        <tr><td>อ-</td><td>aw</td><td>Depan konsonan</td><td>นอ (naw)</td><td>beristirahat</td></tr>
+        <tr><th>Vokal</th><th>Suara</th><th>Posisi</th><th>Contoh</th></tr>
+        <tr><td>า</td><td>aa</td><td>Belakang konsonan</td><td>มา (maa)</td></tr>
+        <tr><td>ี</td><td>ii</td><td>Atas konsonan</td><td>มี (mii)</td></tr>
+        <tr><td>ือ</td><td>ue</td><td>Atas dan belakang</td><td>คือ (kue)</td></tr>
+        <tr><td>ู</td><td>uu</td><td>Bawah konsonan</td><td>พู (phuu)</td></tr>
+        <tr><td>เ-</td><td>ee</td><td>Depan konsonan</td><td>เม (mee)</td></tr>
+        <tr><td>แ-</td><td>ae</td><td>Depan konsonan</td><td>แม่ (mae)</td></tr>
+        <tr><td>โ-</td><td>oo</td><td>Depan konsonan</td><td>โม (moo)</td></tr>
+        <tr><td>อ-</td><td>aw</td><td>Depan konsonan</td><td>นอ (noo)</td></tr>
       </table>
     </div>
 
@@ -120,10 +120,10 @@
       <h2>4. Vokal Gabungan (Diftong)</h2>
       <p>Diftong adalah kombinasi dua vokal dalam satu suku kata. Bahasa Thai memiliki beberapa diftong penting.</p>
       <table>
-        <tr><th>Vokal</th><th>Suara</th><th>Contoh</th><th>Arti</th></tr>
-        <tr><td>เอีย</td><td>ia</td><td>เสีย (sia)</td><td>rusak</td></tr>
-        <tr><td>เอือ</td><td>uea</td><td>เพื่อ (phuea)</td><td>untuk</td></tr>
-        <tr><td>อัว</td><td>ua</td><td>ตัว (tua)</td><td>tubuh</td></tr>
+        <tr><th>Vokal</th><th>Suara</th><th>Contoh</th></tr>
+        <tr><td>เอีย</td><td>ia</td><td>เสีย (sia)</td></tr>
+        <tr><td>เอือ</td><td>uea</td><td>เพื่อ (phuea)</td></tr>
+        <tr><td>อัว</td><td>ua</td><td>ตัว (tua)</td></tr>
       </table>
     </div>
 
